testsuite/tests/parser/should_fail/typeopsDataCon_A.hs
data T = Int :+ Int :+ Int
