testsuite/tests/parser/should_fail/typeopsDataCon_A.stderr

typeopsDataCon_A.hs:1:10: error: [GHC-30670]
    Cannot parse an infix data constructor in a data/newtype declaration:
      Int :+ Int :+ Int
